--- a/root/css/main.css
+++ b/root/css/main.css
@@ -5,99 +5,49 @@ body{
     background-color: black;
     margin:0;
     padding: 0;
-    background-image: url(../images/smoke.jpg);
-    background-position: 0 0;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 header {
-    position: relative;
-    height: 100vh;
-    display: flex;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
     align-items: center;
-    overflow-y: auto;
-    padding-left: 10vh;
-    padding-right: 10vh;
+    padding-left: 1rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
     text-shadow: 1px 1px silver;
     z-index:1;
+    background-color: black;
+    font-size: 1.25rem;
 }
 
-header > .container {
-    width:100%;
-}
-
-header h1 {
+main{
+    font-size: 1.25rem;
+    line-height: 1.5rem;
     position: absolute;
-    font-size: 2rem;
-    font-weight: bold;
-    right:1rem;
-    top: .4rem;
-}
-
-header h1 img {
-    vertical-align: middle;
-}
-
-.project{
-    position: absolute;
-    z-index: 1000;
-    width: 300px;
-    top: 20vh;
-    left: 50%;
-    transform: translate(-50%, 0);
-    background-color: #8181814a;
+    top:3rem;
+    bottom:2rem;
+    border-width:1px;
+    border-style: dashed;
+    border-color: darkslategray;
     border-radius: 1rem;
-    padding: 1rem;
-    box-shadow: 1px 1px #ffffff50;
-    min-height: 200px;
-}
-
-.project img{
-    width: 85%;
-    border-radius: .5rem;
-}
-
-.project a{
-    width: 100%;
-    text-align: center;
-    display: inline-block;
-    color: white;
-    text-decoration: none;
-    margin-top: 1.5rem;
-}
-
-.project a.title{
-    font-size: 2rem;
-    font-weight: bold;
-    margin-top: 1rem;
-}
-
-.project a.description{
-    font-size: 1rem;
-    font-weight: bold;
-    margin-top: .5rem;
-}
-
-.project a.github{
-    margin-top: .2rem;
-}
-
-.project a.github img{
-    width: 1.5rem;
+    overflow-y: auto;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    --color: rgba(0, 200, 0, 0.99);
+    --animation: terminal-glow;
+    --glow: 1;
 }
 
 footer {
     position: absolute;
     bottom: 0;
-    left: 0;
-    padding-left: 5vh;
-    padding-bottom: 5vh;
+    right: 0;
+    padding-right: .2rem;
+    padding-bottom: .2rem;
     z-index:1;
-}
-
-footer > .container {
-    width:100%;
+    background-color: black;
 }
 
 footer a {
@@ -115,14 +65,6 @@ footer a:last-child::after {
     content: "";
 }
 
-@media (max-width: 500px) {
-    header{
-        text-shadow: 0 0 transparent;
-    }
-    header h1{
-        font-size: 1rem;
-    }
-    header h1 img {
-        width: 1.5rem;
-    }
+art{
+    display: none;
 }
